--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "google-map-react": "^2.1.10",
     "gsap": "^3.10.3",
     "next": "12.1.4",
     "next-themes": "^0.1.1",
