--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-lottie-player": "^1.4.1",
+    "react-redux": "^8.0.1",
     "react-swipeable-views": "^0.14.0",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
   },
