--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-themes": "^0.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.3.1",
     "react-lottie-player": "^1.4.1",
     "react-swipeable-views": "^0.14.0",
