--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "gsap": "^3.10.3",
+    "mdb-react-ui-kit": "^4.1.0",
     "next": "12.1.4",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.2.0",
     "react-dom": "17.0.2",
+    "react-fast-marquee": "^1.3.5",
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.3.1",
     "react-lottie-player": "^1.4.1",
@@ -25,7 +29,7 @@
     "xtend": "^4.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.8",
     "postcss": "^8.2.13",
     "sass": "^1.49.11",
     "tailwindcss": "^3.0.23"
